# python-project-49

./: .gitignore  GitHub  GitHub.pub  Makefile  README.md  brain-even-demo.cast  brain_gcd.cast  demo.cast  pyproject.toml
brain_games/: cli.py  game_engine.py
brain_games/games/: brain_calc.py  brain_calc_logic.py  brain_even.py  brain_even_logic.py  brain_gcd.py  brain_gcd_logic.py  brain_prime.py  brain_prime_logic.py  brain_progression.py  brain_progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
