[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Maksim Rubanets <you@example.com>"]
repository = "https://github.com/SvamiBog/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.games.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.games.brain_prime:main"
